Add validation for cyfeiriad

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -3,3 +3,9 @@ ebost.is.required=Mae'n rhaid rhoi ebost i'r wasanaeth
 disgrifiad.is.required=Mae'n rhaid rhoi ddisgrifiad i'r wasanaeth
 
 invalid.rhifFfon=Nid yw ffurf y rhif ffon yn gywir. Enghraifft dylus: 01233 445566
+invalid.codPost=Nid yw ffurf y cod post yn gywir. Enghraifft dylus: CF24 1SD
+
+llinellGyntaf.is.required=Mae'n rhaid rhoi llinell gyntaf y cyfeiriad
+dinas.is.required=Mae'n rhaid rhoi'r ddinas
+sir.is.required=Mae'n rhaid rhoi'r sir
+cosPost.is.required=Mae'n rhaid rhoi'r cod post
