WIP add i18n to frontPage.jsp

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -9,3 +9,11 @@ llinellGyntaf.is.required=Mae'n rhaid rhoi llinell gyntaf y cyfeiriad
 dinas.is.required=Mae'n rhaid rhoi'r ddinas
 sir.is.required=Mae'n rhaid rhoi'r sir
 cosPost.is.required=Mae'n rhaid rhoi'r cod post
+
+logout.successful=Allgofnodwyd yn llwyddianus
+
+welcome.add.business=Rhannwch busnes neu gwasanaeth cyhoeddus sydd yn darparu gwasanaeth yn Gymraeg ac yn Saesneg
+
+service.wales=Gwasanaethau Cymru
+service.list=Rhestr Gwasanaethau
+service.add=Adio Gwasanaeth
