--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -9,3 +9,11 @@ llinellGyntaf.is.required=First line is required
 dinas.is.required=City is required
 sir.is.required=County is required
 cosPost.is.required=Postcode is required
+
+logout.successful=Successfully logged out
+
+welcome.add.business=Share a business or a public service that provides their service in Welsh and English
+
+service.wales=Services Wales
+service.list=Service List
+service.add=Add a Service
