WIP add i18n to menu.jsp

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -17,3 +17,9 @@ welcome.add.business=Rhannwch busnes neu gwasanaeth cyhoeddus sydd yn darparu gw
 service.wales=Gwasanaethau Cymru
 service.list=Rhestr Gwasanaethau
 service.add=Adio Gwasanaeth
+
+menu.home=Adref
+menu.aboutus=Amdanom
+menu.login.or.register=Mewngofnodi/Cofrestru
+menu.my.services=Fy Ngwasanaethau
+menu.logout=Allgofnodi
