--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -17,3 +17,9 @@ welcome.add.business=Share a business or a public service that provides their se
 service.wales=Services Wales
 service.list=Service List
 service.add=Add a Service
+
+menu.home=Home
+menu.aboutus=About Us
+menu.login.or.register=Login/Register
+menu.my.services=My Services
+menu.logout=Logout
