WIP add i18n to footer.jsp

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -23,3 +23,5 @@ menu.aboutus=Amdanom
 menu.login.or.register=Mewngofnodi/Cofrestru
 menu.my.services=Fy Ngwasanaethau
 menu.logout=Allgofnodi
+
+copyright.notice=Ni chaniateir cop&iuml;o na defnyddio cynnwys y wefan hon mewn unrhyw modd arall heb ganiat&acirc;d
