--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -23,3 +23,5 @@ menu.aboutus=About Us
 menu.login.or.register=Login/Register
 menu.my.services=My Services
 menu.logout=Logout
+
+copyright.notice=Please seek permission to use any content from this website
