WIP add i18n to adioGwasanaeth.jsp

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -25,3 +25,16 @@ menu.my.services=Fy Ngwasanaethau
 menu.logout=Allgofnodi
 
 copyright.notice=Ni chaniateir cop&iuml;o na defnyddio cynnwys y wefan hon mewn unrhyw modd arall heb ganiat&acirc;d
+
+form.attributes=Nodweddion
+form.service.name=Enw'r Wasanaeth
+form.category=Categori
+form.phonenumber=Rhif Ffon
+form.email=Ebost
+form.first.line=Llinell Gyntaf
+form.second.line=Ail Linell
+form.city=Dinas
+form.county=Sir
+form.postcode=Cod Post
+form.description=Disgrifiad
+form.submit=Cyflwyno
