--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -25,3 +25,16 @@ menu.my.services=My Services
 menu.logout=Logout
 
 copyright.notice=Please seek permission to use any content from this website
+
+form.attributes=Attributes
+form.service.name=Service Name
+form.category=Category
+form.phonenumber=Phone number
+form.email=Email
+form.first.line=First line
+form.second.line=Second line
+form.city=City
+form.county=County
+form.postcode=Postcode
+form.description=Description
+form.submit=Submit
