WIP i18n Profile page and service list

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -38,3 +38,10 @@ form.county=Sir
 form.postcode=Cod Post
 form.description=Disgrifiad
 form.submit=Cyflwyno
+
+users.profile=Proffil {0}
+
+list.empty.notification=Gwag! Ychwanegwch gwasanaethau eich hun trwy clicio ''Adio Gwasanaeth'' uchod
+list.name=Enw
+list.category=Categori
+list.city=Dinas
