--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -38,3 +38,10 @@ form.county=County
 form.postcode=Postcode
 form.description=Description
 form.submit=Submit
+
+users.profile={0}''s profile
+
+list.empty.notification=Empty! Add a service by clicking the ''Add a Service'' button above
+list.name=Name
+list.category=Category
+list.city=City
