--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -45,3 +45,13 @@ list.empty.notification=Gwag! Ychwanegwch gwasanaethau eich hun trwy clicio ''Ad
 list.name=Enw
 list.category=Categori
 list.city=Dinas
+
+login.login=Logiwch i mewn
+login.email.address=Cyfeiriad ebost
+login.password=Cyfrinair
+login.password.reenter=Cyfrinair Ail-waith
+login.already.registered=Cofrestrwyd yr enw defnyddiwr yma yn barod. Ceisiwch eto.
+login.invalid.username=Enw defnyddiwr neu cyfrinair anghywir. Ceisiwch eto.
+login.username.must.be.email=Rhaid defnyddio cyfeiriad ebost fel enw defnyddiwr. Ceisiwch eto.
+login.register=Cofrestrwch
+login.submit=Cyflwyno
