--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -45,3 +45,13 @@ list.empty.notification=Empty! Add a service by clicking the ''Add a Service'' b
 list.name=Name
 list.category=Category
 list.city=City
+
+login.login=Log in
+login.email.address=Email address
+login.password=Password
+login.password.reenter=Re-enter password
+login.already.registered=This username is already registered. Please try again.
+login.invalid.username=Invalid username. Try again.
+login.username.must.be.email=You must user an email address as your username. Please try again.
+login.register=Register
+login.submit=Submit
