i18n categories and add symbols
Internationalize all existing categories using
message bundles and add css to prepend symbol to categories
by using native emojis available in browser.

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -55,3 +55,8 @@ login.invalid.username=Enw defnyddiwr neu cyfrinair anghywir. Ceisiwch eto.
 login.username.must.be.email=Rhaid defnyddio cyfeiriad ebost fel enw defnyddiwr. Ceisiwch eto.
 login.register=Cofrestrwch
 login.submit=Cyflwyno
+
+bwyti=Bwyti
+coffi=Coffi
+llywodraeth=Llywodraeth
+tafarn=Tafarn
