--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -55,3 +55,8 @@ login.invalid.username=Invalid username. Try again.
 login.username.must.be.email=You must user an email address as your username. Please try again.
 login.register=Register
 login.submit=Submit
+
+bwyti=Restaurant
+coffi=Coffee
+llywodraeth=Government
+tafarn=Pub
