--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -38,6 +38,8 @@ form.county=Sir
 form.postcode=Cod Post
 form.description=Disgrifiad
 form.submit=Cyflwyno
+form.details=Nodweddion
+form.address=Cyfeiriad
 
 users.profile=Proffil {0}
 
