--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -38,6 +38,8 @@ form.county=County
 form.postcode=Postcode
 form.description=Description
 form.submit=Submit
+form.details=Details
+form.address=Address
 
 users.profile={0}''s profile
 
