Add reset password link to login page

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -57,6 +57,7 @@ login.invalid.username=Enw defnyddiwr neu cyfrinair anghywir. Ceisiwch eto.
 login.username.must.be.email=Rhaid defnyddio cyfeiriad ebost fel enw defnyddiwr. Ceisiwch eto.
 login.register=Cofrestrwch
 login.submit=Cyflwyno
+login.password.reset=Ailosod cyfrinair
 
 bwyti=Bwyti
 coffi=Coffi
