--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -57,6 +57,7 @@ login.invalid.username=Invalid username. Try again.
 login.username.must.be.email=You must user an email address as your username. Please try again.
 login.register=Register
 login.submit=Submit
+login.password.reset=Reset password
 
 bwyti=Restaurant
 coffi=Coffee
