Add Reset Password screen and show message if email not registered

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -59,6 +59,8 @@ login.register=Cofrestrwch
 login.submit=Cyflwyno
 login.password.reset=Ailosod cyfrinair
 
+registration.email.not.found=Ebost heb ei gofrestri. Ceisiwch eto.
+
 bwyti=Bwyti
 coffi=Coffi
 llywodraeth=Llywodraeth
