--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -59,6 +59,8 @@ login.register=Register
 login.submit=Submit
 login.password.reset=Reset password
 
+registration.email.not.found=Email not found. Please try again.
+
 bwyti=Restaurant
 coffi=Coffee
 llywodraeth=Government
