Send Password Reset email (localized)

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -60,6 +60,9 @@ login.submit=Cyflwyno
 login.password.reset=Ailosod cyfrinair
 
 registration.email.not.found=Ebost heb ei gofrestri. Ceisiwch eto.
+registration.reset.email=Ymweld a http://gwasanaethau.cymru/mewngofnodi/ailosod/tocyn/{0} i ailosod eich cyfrinair.
+registration.reset.email.subject=Gwasanaethau Cymraeg: Ailosod Cyfrinair
+
 
 bwyti=Bwyti
 coffi=Coffi
