--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -60,6 +60,8 @@ login.submit=Submit
 login.password.reset=Reset password
 
 registration.email.not.found=Email not found. Please try again.
+registration.reset.email=Please visit http://gwasanaethau.cymru/mewngofnodi/ailosod/tocyn/{0} to reset your password.
+registration.reset.email.subject=Services Wales: Reset Password
 
 bwyti=Restaurant
 coffi=Coffee
