i18n reset password page and add check email page

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -60,6 +60,12 @@ login.submit=Cyflwyno
 login.password.reset=Ailosod cyfrinair
 
 registration.email.not.found=Ebost heb ei gofrestri. Ceisiwch eto.
+
+registration.reset.password=Ailosod cyfrinair
+registration.reset.provide.password=Gosod eich cyfeiriad ebost isod
+registration.reset.send.email=Anfon Ebost
+registration.reset.check.email=Rydym ni wedi anfon ebost i chi er mwyn ailosod eich cyfrinair. Ewch i eich cyfrif ebost a cliciwch ar y linc gosodedig.
+
 registration.reset.email=Ymweld a http://gwasanaethau.cymru/mewngofnodi/ailosod/tocyn/{0} i ailosod eich cyfrinair.
 registration.reset.email.subject=Gwasanaethau Cymraeg: Ailosod Cyfrinair
 
