--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -59,6 +59,12 @@ login.register=Register
 login.submit=Submit
 login.password.reset=Reset password
 
+registration.reset.password=Reset password
+registration.reset.provide.password=Please provide your email address below
+registration.reset.send.email=Send Email
+registration.reset.check.email=We have sent you an email to reset your password. Please visit your email
+and click on the link provided.
+
 registration.email.not.found=Email not found. Please try again.
 registration.reset.email=Please visit http://gwasanaethau.cymru/mewngofnodi/ailosod/tocyn/{0} to reset your password.
 registration.reset.email.subject=Services Wales: Reset Password
