Changed Coffi to Caffi and coffi to caffi

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -71,6 +71,6 @@ registration.reset.email.subject=Gwasanaethau Cymraeg: Ailosod Cyfrinair
 
 
 bwyti=Bwyti
-coffi=Coffi
+caffi=Caffi
 llywodraeth=Llywodraeth
 tafarn=Tafarn
