--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -70,6 +70,6 @@ registration.reset.email=Please visit http://gwasanaethau.cymru/mewngofnodi/ailo
 registration.reset.email.subject=Services Wales: Reset Password
 
 bwyti=Restaurant
-caffi=Café
+coffi=Café
 llywodraeth=Government
 tafarn=Pub
