--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -68,7 +68,8 @@ registration.reset.check.email=Rydym ni wedi anfon ebost i chi er mwyn ailosod e
 
 registration.reset.email=Ymweld a http://gwasanaethau.cymru/mewngofnodi/ailosod/tocyn/{0} i ailosod eich cyfrinair.
 registration.reset.email.subject=Gwasanaethau Cymraeg: Ailosod Cyfrinair
-
+registration.reset.password.successful=Ailosodwyd y cyfrinair yn llwyddianus
+registration.reset.password.successful.message=Ailosodwyd y cyfrinair yn llwyddianus. Ceisisiwch i logio i mewn.
 
 bwyti=Bwyti
 coffi=Caffi
