Add exceptions to password reset screen

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -70,6 +70,8 @@ registration.reset.email=Ymweld a http://gwasanaethau.cymru/mewngofnodi/ailosod/
 registration.reset.email.subject=Gwasanaethau Cymraeg: Ailosod Cyfrinair
 registration.reset.password.successful=Ailosodwyd y cyfrinair yn llwyddianus
 registration.reset.password.successful.message=Ailosodwyd y cyfrinair yn llwyddianus. Ceisisiwch i logio i mewn.
+registration.reset.password.not.matching=Nid yw'r cyfrineiriau yn cydweddu. Ceidiwch eto.
+registration.reset.password.token.expired=Mae'r tocyn er mwyn ailosod eich cyfrinair yn rhy hen. Ceisiwch eto.
 
 bwyti=Bwyti
 coffi=Caffi
