--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -62,14 +62,15 @@ login.password.reset=Reset password
 registration.reset.password=Reset password
 registration.reset.provide.password=Please provide your email address below
 registration.reset.send.email=Send Email
-registration.reset.check.email=We have sent you an email to reset your password. Please visit your email
-and click on the link provided.
+registration.reset.check.email=We have sent you an email to reset your password. Please visit your email and click on the link provided.
 
 registration.email.not.found=Email not found. Please try again.
 registration.reset.email=Please visit http://gwasanaethau.cymru/mewngofnodi/ailosod/tocyn/{0} to reset your password.
 registration.reset.email.subject=Services Wales: Reset Password
 registration.reset.password.successful=Reset Password Successful
 registration.reset.password.successful.message=Reset password successfully. Please log in again.
+registration.reset.password.not.matching=The passwords do not match. Please try again
+registration.reset.password.token.expired=The token for resetting your password has expired. Please try again.
 
 bwyti=Restaurant
 coffi=Café
