Localize registration successful message and add logging to registration method in RegistrationService class

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -61,6 +61,7 @@ login.password.reset=Ailosod cyfrinair
 
 registration.email.not.found=Ebost heb ei gofrestri. Ceisiwch eto.
 
+registration.successful=Cofrestrwyd {0} yn llwyddianus! Cewch mewngofnodi nawr.
 registration.reset.password=Ailosod cyfrinair
 registration.reset.provide.password=Gosod eich cyfeiriad ebost isod
 registration.reset.send.email=Anfon Ebost
