--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -59,6 +59,7 @@ login.register=Register
 login.submit=Submit
 login.password.reset=Reset password
 
+registration.successful=Registered {0} successfully! You may now log in.
 registration.reset.password=Reset password
 registration.reset.provide.password=Please provide your email address below
 registration.reset.send.email=Send Email
