Implement free search

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -24,6 +24,8 @@ menu.login.or.register=Mewngofnodi/Cofrestru
 menu.my.services=Fy Ngwasanaethau
 menu.logout=Allgofnodi
 
+frontpage.search=Chwilio
+
 copyright.notice=Ni chaniateir cop&iuml;o na defnyddio cynnwys y wefan hon mewn unrhyw modd arall heb ganiat&acirc;d
 
 form.attributes=Nodweddion
@@ -73,6 +75,11 @@ registration.reset.password.successful=Ailosodwyd y cyfrinair yn llwyddianus
 registration.reset.password.successful.message=Ailosodwyd y cyfrinair yn llwyddianus. Ceisisiwch i logio i mewn.
 registration.reset.password.not.matching=Nid yw'r cyfrineiriau yn cydweddu. Ceidiwch eto.
 registration.reset.password.token.expired=Mae'r tocyn er mwyn ailosod eich cyfrinair yn rhy hen. Ceisiwch eto.
+
+filter.city=Hidlo i ddangos gwasanaethau dinas <em>{0}</em> yn unig.
+filter.categori=Hidlo i ddangos gwasanaethau categori <em>{0}</em> yn unig.
+filter.searchterm=Hidlo gan termyn {0}.
+filter.reset=Ailosod
 
 bwyti=Bwyti
 coffi=Caffi
