--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -24,6 +24,8 @@ menu.login.or.register=Login/Register
 menu.my.services=My Services
 menu.logout=Logout
 
+frontpage.search=Search
+
 copyright.notice=Please seek permission to use any content from this website
 
 form.attributes=Attributes
@@ -72,6 +74,11 @@ registration.reset.password.successful=Reset Password Successful
 registration.reset.password.successful.message=Reset password successfully. Please log in again.
 registration.reset.password.not.matching=The passwords do not match. Please try again
 registration.reset.password.token.expired=The token for resetting your password has expired. Please try again.
+
+filter.city=Filter services for city <em>{0}</em> only.
+filter.categori=Filter services for category <em>{0}</em> only.
+filter.searchterm=Filter by search term {0}.
+filter.reset=Reset
 
 bwyti=Restaurant
 coffi=Café
