Send email on successful registration

--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -62,6 +62,9 @@ login.submit=Submit
 login.password.reset=Reset password
 
 registration.successful=Registered {0} successfully! You may now log in.
+registration.successful.email=Croeso i Gwasanaethau Cymru, {0}! Ewch i http://gwasanaethau.cymru/ i mewngofnodi
+registration.successful.email.subject=Croeso i Gwasanaethau Cymru
+
 registration.reset.password=Reset password
 registration.reset.provide.password=Please provide your email address below
 registration.reset.send.email=Send Email
