--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -64,6 +64,9 @@ login.password.reset=Ailosod cyfrinair
 registration.email.not.found=Ebost heb ei gofrestri. Ceisiwch eto.
 
 registration.successful=Cofrestrwyd {0} yn llwyddianus! Cewch mewngofnodi nawr.
+registration.successful.email=Croeso i Gwasanaethau Cymru, {0}! Ewch i http://gwasanaethau.cymru/ i mewngofnodi
+registration.successful.email.subject=Croeso i Gwasanaethau Cymru
+
 registration.reset.password=Ailosod cyfrinair
 registration.reset.provide.password=Gosod eich cyfeiriad ebost isod
 registration.reset.send.email=Anfon Ebost
