internationalize gweldGwasanaeth.jsp
Make gweldGwasanaeth.jsp english and welsh
and reorganize comments section so that
textarea on the left instead of the right.

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -84,6 +84,20 @@ filter.categori=Hidlo i ddangos gwasanaethau categori <em>{0}</em> yn unig.
 filter.searchterm=Hidlo gan termyn {0}.
 filter.reset=Ailosod
 
+service.description=Disgrifiad
+service.category=Categori
+service.contact=Cyswllt
+service.maintained.by=Cynhelir y wasanaeth hon gan <em>{0}</em>
+service.edit=Adolygu
+service.comments=Sylwadau
+service.comment.add=Adio Sylw
+service.comment.submit=Cyflwyno
+service.comment.language.quality=Safon Iaith
+service.comment.signage.quality=Safon Arwyddiaeth
+service.comment.service.quality=Safon Gwasanaeth
+service.comment.placeholder=Comments...
+service.comment.date=Dyddiad
+
 bwyti=Bwyti
 coffi=Caffi
 llywodraeth=Llywodraeth
