--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -83,6 +83,20 @@ filter.categori=Filter services for category <em>{0}</em> only.
 filter.searchterm=Filter by search term {0}.
 filter.reset=Reset
 
+service.description=Description
+service.category=Category
+service.contact=Contact
+service.maintained.by=This service is owned by <em>{0}</em>
+service.edit=Edit
+service.comments=Comments
+service.comment.add=Add Comment
+service.comment.submit=Submit
+service.comment.language.quality=Standard of Language
+service.comment.signage.quality=Standard of Bilingual Signage
+service.comment.service.quality=Standard of Service
+service.comment.placeholder=Sylwadau...
+service.comment.date=Date
+
 bwyti=Restaurant
 coffi=Café
 llywodraeth=Government
