Filter using free search
Implement a free search box on the front page
using Intercooler JS.

--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -25,6 +25,8 @@ menu.my.services=My Services
 menu.logout=Logout
 
 frontpage.search=Search
+search.name.or.city=Enter service name or city
+
 
 copyright.notice=Please seek permission to use any content from this website
 
