--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -25,6 +25,7 @@ menu.my.services=Fy Ngwasanaethau
 menu.logout=Allgofnodi
 
 frontpage.search=Chwilio
+search.name.or.city=Mewnbynnu enw gwasanaeth neu dinas
 
 copyright.notice=Ni chaniateir cop&iuml;o na defnyddio cynnwys y wefan hon mewn unrhyw modd arall heb ganiat&acirc;d
 
