GC-100 Add nickname to UI
Add nickname to loginForm.jsp and add nickname attribute to
RegistrationDetails class.

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -53,6 +53,7 @@ list.city=Dinas
 
 login.login=Logiwch i mewn
 login.email.address=Cyfeiriad ebost
+login.nickname=Llysenw
 login.password=Cyfrinair
 login.password.reenter=Cyfrinair Ail-waith
 login.already.registered=Cofrestrwyd yr enw defnyddiwr yma yn barod. Ceisiwch eto.
