--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -54,6 +54,7 @@ list.city=City
 
 login.login=Log in
 login.email.address=Email address
+login.nickname=Nickname
 login.password=Password
 login.password.reenter=Re-enter password
 login.already.registered=This username is already registered. Please try again.
