GC-100 Add error message when duplicate nickname
Also fix login form to redirect to login form when reigstration
yields error.

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -56,7 +56,8 @@ login.email.address=Cyfeiriad ebost
 login.nickname=Llysenw
 login.password=Cyfrinair
 login.password.reenter=Cyfrinair Ail-waith
-login.already.registered=Cofrestrwyd yr enw defnyddiwr yma yn barod. Ceisiwch eto.
+login.already.registered=Cofrestrwyd yr ebost yma yn barod. Ceisiwch eto.
+nickname.already.registered=Cofrestrwyd y llysenw yma yn barod. Ceisiwch eto.
 login.invalid.username=Enw defnyddiwr neu cyfrinair anghywir. Ceisiwch eto.
 login.username.must.be.email=Rhaid defnyddio cyfeiriad ebost fel enw defnyddiwr. Ceisiwch eto.
 login.register=Cofrestrwch
