--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -57,7 +57,8 @@ login.email.address=Email address
 login.nickname=Nickname
 login.password=Password
 login.password.reenter=Re-enter password
-login.already.registered=This username is already registered. Please try again.
+login.already.registered=This email is already registered. Please try again.
+nickname.already.registered=This nickname is already registered. Please try again.
 login.invalid.username=Invalid username. Try again.
 login.username.must.be.email=You must user an email address as your username. Please try again.
 login.register=Register
