Translate password error messages to English and change domain to findmylingo.com

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -67,7 +67,7 @@ login.password.reset=Ailosod cyfrinair
 registration.email.not.found=Ebost heb ei gofrestri. Ceisiwch eto.
 
 registration.successful=Cofrestrwyd {0} yn llwyddianus! Cewch mewngofnodi nawr.
-registration.successful.email=Croeso i Gwasanaethau Cymru, {0}! Ewch i http://gwasanaethau.cymru/ i mewngofnodi
+registration.successful.email=Croeso i Gwasanaethau Cymru, {0}! Ewch i http://findmylingo.com/ i mewngofnodi
 registration.successful.email.subject=Croeso i Gwasanaethau Cymru
 
 registration.reset.password=Ailosod cyfrinair
@@ -75,7 +75,7 @@ registration.reset.provide.password=Gosod eich cyfeiriad ebost isod
 registration.reset.send.email=Anfon Ebost
 registration.reset.check.email=Rydym ni wedi anfon ebost i chi er mwyn ailosod eich cyfrinair. Ewch i eich cyfrif ebost a cliciwch ar y linc gosodedig.
 
-registration.reset.email=Ymweld a http://gwasanaethau.cymru/login/reset/token/{0} i ailosod eich cyfrinair.
+registration.reset.email=Ymweld a http://findmylingo.com/login/reset/token/{0} i ailosod eich cyfrinair.
 registration.reset.email.subject=Gwasanaethau Cymraeg: Ailosod Cyfrinair
 registration.reset.password.successful=Ailosodwyd y cyfrinair yn llwyddianus
 registration.reset.password.successful.message=Ailosodwyd y cyfrinair yn llwyddianus. Ceisisiwch i logio i mewn.
