--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -66,7 +66,7 @@ login.submit=Submit
 login.password.reset=Reset password
 
 registration.successful=Registered {0} successfully! You may now log in.
-registration.successful.email=Croeso i Gwasanaethau Cymru, {0}! Ewch i http://gwasanaethau.cymru/ i mewngofnodi
+registration.successful.email=Croeso i Gwasanaethau Cymru, {0}! Ewch i http://findmylingo.com/ i mewngofnodi
 registration.successful.email.subject=Croeso i Gwasanaethau Cymru
 
 registration.reset.password=Reset password
@@ -75,7 +75,7 @@ registration.reset.send.email=Send Email
 registration.reset.check.email=We have sent you an email to reset your password. Please visit your email and click on the link provided.
 
 registration.email.not.found=Email not found. Please try again.
-registration.reset.email=Please visit http://gwasanaethau.cymru/login/reset/token/{0} to reset your password.
+registration.reset.email=Please visit http://findmylingo.com/login/reset/token/{0} to reset your password.
 registration.reset.email.subject=Services Wales: Reset Password
 registration.reset.password.successful=Reset Password Successful
 registration.reset.password.successful.message=Reset password successfully. Please log in again.
