Add service description to Add Service Wizard

--- a/src/main/webapp/WEB-INF/messages_cy.properties
+++ b/src/main/webapp/WEB-INF/messages_cy.properties
@@ -39,7 +39,7 @@ form.second.line=Ail Linell
 form.city=Dinas
 form.county=Sir
 form.postcode=Cod Post
-form.description=Disgrifiad
+form.description=Disgrifiad Gwasanaeth
 form.submit=Cyflwyno
 form.details=Nodweddion
 form.address=Cyfeiriad
