--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -40,7 +40,7 @@ form.second.line=Second line
 form.city=City
 form.county=County
 form.postcode=Postcode
-form.description=Description
+form.description=Service Description
 form.submit=Submit
 form.details=Details
 form.address=Address
